bug. dragged color is now visible.

--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -253,6 +253,9 @@ h4.job_title{
     /* border: 1px solid #999; */
     box-shadow: 2px 2px 4px 2px rgba(0,0,0,0.33);
     margin: 4px;
+	background-image: url(/plugin/mrbeam/static/img/line_overlay.svg);
+	background-size: cover;
+	background-position: center;
 }
 
 .img_drop_zone,
